# ASR_2024

./: README.md  thirdparty.repos
.github/workflows/: main.yaml
BTs/bt_bumpgo/: package.xml
BTs/bt_bumpgo/include/bt_bumpgo/: Forward.hpp  IsObstacle.hpp  Turn.hpp
BTs/bt_bumpgo/launch/: bumpgo.launch.py
BTs/bt_bumpgo/src/bt_bumpgo/: Back.cpp  Forward.cpp  Turn.cpp
BTs/bt_bumpgo/tests/: bt_action_test.cpp  bt_forward_main.cpp
BTs/bt_nav/: CMakeLists.txt  package.xml
BTs/bt_nav/behavior_tree_xml/: navigate.xml
BTs/bt_nav/include/bt_nav/: GetWaypoint.hpp  Move.hpp
BTs/bt_nav/include/bt_nav/ctrl_support/: BTActionNode.hpp
BTs/bt_nav/src/: bt_nav_main.cpp
BTs/bt_nav/src/bt_nav/: GetWaypoint.cpp  Move.cpp
bt_bumpgo/: CMakeLists.txt  package.xml
bt_bumpgo/include/bt_bumpgo/: Back.hpp
bt_bumpgo/src/: bt_bumpgo_main.cpp
bt_bumpgo/src/bt_bumpgo/: IsObstacle.cpp
comms/: README.md
comms/comms/: CMakeLists.txt  package.xml
comms/comms/include/comms/: ActionClient.hpp  ActionServer.hpp  ServiceClient.hpp  ServiceClient2.hpp  ServiceServer.hpp
comms/comms/src/: action_client_main.cpp  action_server_main.cpp  service_client_main.cpp  service_server_main.cpp
comms/comms/src/comms/: ActionClient.cpp  ActionServer.cpp  ServiceClient.cpp  ServiceClient2.cpp  ServiceServer.cpp
comms/comms/test/: CMakeLists.txt  comms_tests.cpp
comms/comms_interfaces/: CMakeLists.txt  package.xml
comms/comms_interfaces/action/: GenerateInformation.action
comms/comms_interfaces/msg/: Information.msg
comms/comms_interfaces/srv/: GetInformation.srv
fsm_bumpgo/: CMakeLists.txt  package.xml
fsm_bumpgo/include/fsm_bumpgo/: BumpGoNode.hpp
fsm_bumpgo/src/: bumpgo_main.cpp
fsm_bumpgo/src/fsm_bumpgo/: BumpGoNode.cpp
node_programming/: CMakeLists.txt  package.xml
node_programming/include/node_programming/: LifeCyclePublisherNode.hpp  PublisherNode.hpp  SubscriberNode.hpp
node_programming/src/: lifecycle_publisher_class.cpp  logger.cpp  logger_class.cpp  pub_sub_mt.cpp  pub_sub_sst.cpp  pub_sub_st.cpp  publisher.cpp  publisher_class.cpp  simple.cpp  subscriber.cpp  subscriber_class.cpp
node_programming/src/node_programming/: LifeCyclePublisherNode.cpp  PublisherNode.cpp  SubscriberNode.cpp
sensors/camera/: CMakeLists.txt  package.xml
sensors/camera/config/: params.yaml
sensors/camera/include/camera/: DetectionTo3DfromDepthNode.hpp  DetectionTo3DfromPCNode.hpp  HSVFilterNode.hpp  YoloDetectionNode.hpp
sensors/camera/launch/: camera.launch.py  detection3d_hsv.launch.py
sensors/camera/src/: detection_2d_to_3d_depth_main.cpp  detection_2d_to_3d_pc2_main.cpp  hsv_filter_main.cpp  yolo_detection_main.cpp
sensors/camera/src/camera/: DetectionTo3DfromDepthNode.cpp  DetectionTo3DfromPCNode.cpp  HSVFilterNode.cpp  YoloDetectionNode.cpp
sensors/camera/worlds/: robocuplab.world  robocupspl.world
sensors/laser/: CMakeLists.txt  package.xml
sensors/laser/config/: params.yaml
sensors/laser/include/laser/: ObstacleDetectorNode.hpp
sensors/laser/launch/: laser.launch.py
sensors/laser/src/: obstacle_detector_main.cpp
sensors/laser/src/laser/: ObstacleDetectorNode.cpp
sump_bumpgo/: CMakeLists.txt  package.xml
sump_bumpgo/include/sump_bumpgo/: AvoidBehavior.hpp  BumpGoBehavior.hpp  ForwardBehavior.hpp
sump_bumpgo/src/: bumpgo_main.cpp
sump_bumpgo/src/sump_bumpgo/: AvoidBehavior.cpp  BumpGoBehavior.cpp  ForwardBehavior.cpp
tf_seeker/: CMakeLists.txt  package.xml
tf_seeker/config/: seeker.rviz
tf_seeker/include/tf_seeker/: PIDController.hpp  TFPublisherNode.hpp  TFSeekerNode.hpp
tf_seeker/launch/: seeker.launch.py
tf_seeker/src/: seeker.cpp  tf_publisher.cpp
tf_seeker/src/tf_seeker/: PIDController.cpp  TFPublisherNode.cpp  TFSeekerNode.cpp
tutorial_cmake/: README.md
tutorial_cmake/step_0/: CMakeLists.txt
tutorial_cmake/step_1/: CMakeLists.txt
tutorial_cmake/step_1/include/: functions.hpp
tutorial_cmake/step_1/src/: functions.cpp  program.cpp
tutorial_cmake/step_2/: CMakeLists.txt
tutorial_cmake/step_2/include/cmake_tutorial_2/: functions.hpp
tutorial_cmake/step_2/src/: program.cpp
tutorial_cmake/step_2/src/cmake_tutorial_2/: functions.cpp
tutorial_cmake/step_3/: CMakeLists.txt
tutorial_cmake/step_3/include/cmake_tutorial_3/: functions.hpp
tutorial_cmake/step_3/src/: program.cpp
tutorial_cmake/step_3/src/cmake_tutorial_3/: functions.cpp
tutorial_cmake/step_4/: CMakeLists.txt
tutorial_cmake/step_4/include/cmake_tutorial_4/: functions.hpp
tutorial_cmake/step_4/src/: program.cpp
tutorial_cmake/step_4/src/cmake_tutorial_4/: functions.cpp
tutorial_cmake/step_5/: CMakeLists.txt
tutorial_cmake/step_5/cmake_tutorial_5_functions/: CMakeLists.txt
tutorial_cmake/step_5/cmake_tutorial_5_functions/include/cmake_tutorial_5_functions/: functions.hpp
tutorial_cmake/step_5/cmake_tutorial_5_functions/src/cmake_tutorial_5_functions/: functions.cpp
tutorial_cmake/step_5/cmake_tutorial_5_program/: CMakeLists.txt
tutorial_cmake/step_5/cmake_tutorial_5_program/src/: program.cpp
tutorial_cmake/step_6/cmake_tutorial_6_functions/: CMakeLists.txt  package.xml
tutorial_cmake/step_6/cmake_tutorial_6_functions/include/cmake_tutorial_6_functions/: functions.hpp
tutorial_cmake/step_6/cmake_tutorial_6_functions/src/cmake_tutorial_6_functions/: functions.cpp
tutorial_cmake/step_6/cmake_tutorial_6_program/: CMakeLists.txt  package.xml
tutorial_cmake/step_6/cmake_tutorial_6_program/src/: program.cpp
tutorial_cmake/step_7/cmake_tutorial_7_functions/: CMakeLists.txt  package.xml
tutorial_cmake/step_7/cmake_tutorial_7_functions/include/cmake_tutorial_7_functions/: functions.hpp
tutorial_cmake/step_7/cmake_tutorial_7_functions/src/cmake_tutorial_7_functions/: functions.cpp
tutorial_cmake/step_7/cmake_tutorial_7_program/: CMakeLists.txt  package.xml
tutorial_cmake/step_7/cmake_tutorial_7_program/src/: program.cpp
